--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter_advanced_drawer: ^1.3.6
+  url_launcher: ^6.2.3
+  video_player:
   flutter:
     sdk: flutter
 
@@ -64,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
